--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <script src="https://kit.fontawesome.com/510e0f8bd6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     
-    <title>ToDo App</title>
+    <title>ToDo Web App</title>
     
 </head>
 <body>
     <div class="main">
-        <h1>ToDo App</h1>
+        <h1>ToDo</h1>
         <input maxlength="50" type="text" id="input" name="input" placeholder="Input and Enter">
+        <button class="btn" onclick="doThis()">add</button>
         <div class="content" id="content">
         </div>
     </div>
